cmake_minimum_required(VERSION 3.28.3)
project(MyReactor LANGUAGES CXX)
add_library(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE Acceptor.cc Buffer.cc Channel.cc CurrentThread.cc DefaultPoller.cc EPoller.cc EventLoop.cc EventLoopThread.cc EventLoopThreadPool.cc InetAddress.cc Logger.cc Poller.cc Socket.cc TcpConnection.cc TcpServer.cc Thread.cc Timestamp.cc)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)